# peer-gemma-v1

./: .gitignore  pyproject.toml  requirements.txt  train.py  trainers.py
configs/: __init__.py  config_schema.py  data_configs.py  deepspeed_z2.json  deepspeed_z2.yaml  deepspeed_z3.json  deepspeed_z3.yaml  model_configs.py  system_configs.py  training_configs.py
configs/model/: gemma-2-9b.py
data/: data_module.py
models/: peer_gemma.py
