[project]
name = "peer-gemma-v1"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "deepspeed>=0.17.1",
    "dotenv>=0.9.9",
    "hydra-zen>=0.15.0",
    "jupyterlab>=4.4.4",
    "loguru>=0.7.3",
    "omegaconf>=2.3.0",
    "peer-pytorch>=0.2.1",
    "torch>=2.7.1",
    "transformers>=4.53.0",
]
